apt (0.8.16~exp5ubuntu9) UNRELEASEDoneiric; urgency=low

  [ Michael Vogt ]
  * apt-pkg/acquire-item.h, apt-pkg/deb/debmetaindex.cc:
    - fix fetching language information by adding OptionalSubIndexTarget

  [ David Kalnischkies ]
  * apt-pkg/acquire-item.cc:
    - if no Release.gpg file is found try to verify with hashes,
      but do not fail if a hash can't be found

 -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 16 Sep 2011 09:16:32 +0200

apt (0.8.16~exp5ubuntu8) oneiric; urgency=low

  * cherry pick r1825 from lp:~mvo/apt/mvo:
    * apt-pkg/contrib/configuration.cc:
    - fix double delete (LP: #848907)
    - ignore only the invalid regexp instead of all options

  * cherry pick r2165 from lp:~donkult/apt/sid:
    [ David Kalnischkies ]
    * cmdline/apt-get.cc:
      - output list of virtual package providers to c1out in -q=1
        instead of /dev/null to unbreak sbuild (LP: #816155)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 13 Sep 2011 18:23:09 +0200

apt (0.8.16~exp5ubuntu7) oneiric; urgency=low

  [ Michael Vogt ]
  * cherry pick revision 2173 from lp:~donkult/apt/sid
  
  [ David Kalnischkies ]
  - M-A:same lockstep unpack should operate on installed
    packages first (LP: #835625)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 13 Sep 2011 09:03:33 +0200

apt (0.8.16~exp5ubuntu6) oneiric; urgency=low

  [ Michael Vogt 
  * merged lp:~jr/ubuntu/oneiric/apt/bzr-get-rename, thanks to
    Jonathan Riddell
  
  [ David Kalnischkies ]
  * lots of cppcheck fixes
  * apt-pkg/packagemanager.cc, apt-pkg/pkgcache.cc:
    - ignore "self"-conflicts for all architectures of a package
      instead of just for the architecture of the package locked at
      in the ordering of installations too (Closes: #802901)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 17 Aug 2011 11:32:58 +0200

apt (0.8.16~exp5ubuntu5) oneiric; urgency=low

  * debian/control:
    - fix VCS location
  * methods/mirror.cc: